@@ -1,3 +1,10 @@
+2003-02-20  Ulrich Drepper  <drepper@redhat.com>
+
+	* pthread_create.c (deallocate_tsd): Clear the entire first block
+	of TSD.
+	* Makefile (tests): Add tst-key4.
+	* tst-key4.c: New file.
+
 2003-02-18  Ulrich Drepper  <drepper@redhat.com>
 
 	* Makefile (tests): Add tst-basic7.
